<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Crime Title</string>
    <string name="crime_details_label">Crime Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="crime_solved_message">Crime marked as solved!</string>
    <string name="crime_unsolved_message">Crime marked as unsolved!</string>
    <string name="ok">OK</string>
    <string name="save_crime">Save crime</string>
    <string name="crime_saved_message">Crime saved!</string>
    <string name="empty_title_message">Please enter crime title!</string>
    <string name="crime_date">Crime date</string>

    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Submit Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is resolved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">Crime Report</string>
    <string name="send_report">Send Report</string>

    <string name="date_snackbar_message">Data : %s</string>

    <string name="choose_date_title">Choose crime date</string>
    <string name="cancel">Cancel</string>

</resources>