<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CrimeFragment">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label" />

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>
    <TextView
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        tools:text="Wed Nov 14 11:56 EST 2018"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/crime_date"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="@android:color/white" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        android:enabled="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ChooseSuspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="выбрать подозреваемого"
            android:background="@color/background"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SendCrimeReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="отправить отчет о подозреваемом"
            android:background="@color/background"
            android:layout_margin="10dp"/>

    </LinearLayout>


</LinearLayout>